# superpotision_machine

./: .clang-format  .gitignore  CMakeLists.txt  INSTALLATION  main.py  requirements.txt  superposition.py
archive/: a.py  b.py  c.py
include/: common.h  constants.h  midi.h  synthesize.h
src/: main.cpp  midi.cpp  synthesize.cpp
superposition/: superposition.py
